Move baseurl to an environment variable and include it in the app layout head, fix spacing on some files

--- a/app/assets/stylesheets/organizations.scss
+++ b/app/assets/stylesheets/organizations.scss
@@ -108,5 +108,5 @@ div.container {
 
 #team-size {
   float: right;
-  width: 20%
+  width: 20%;
 }
